# executorch-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/executorchdemo/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/executorchdemo/: MainActivity.java  SegmentationOutput.java  TensorImageUtils.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/executorchdemo/: ExampleUnitTest.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/executorch_demo/: __init__.py  data_processing.py  dl3_export.py  mobilenet_demo.py  model_export.py  models.py  segmentation_inference.py  utils.py
tests/: test_models.py
